# compiler-shenanigans

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  meson.build
c/: meson.build  regex.c
cpp/: main.cpp
dparser/: CommandLine.g  CommandLine.g.d_parser.c  main.c  mystring.c  mystring.h  nodes.h
plainc/: main  main.c  meson.build
subprojects/: c-algorithms.wrap  cbitset.wrap  sds.wrap  vec.wrap
